rest/rest-deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: pwdcrkaas-rest
spec:
  selector:
    matchLabels:
      app: pwdcrkaas-rest
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: pwdcrkaas-rest
    spec:
      containers:
      - name: pwdcrkaas-rest
        image: shreyash14s/pwdcrkaas-rest:1.0.0
        resources:
          limits:
            memory: "2048Mi"
            cpu: "500m"
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 5000
