rest/rest-service-gke.yaml
apiVersion: v1
kind: Service
metadata:
  name: demucs-rest-svc
spec:
  type: NodePort
  selector:
    app: demucs-rest
  ports:
  - name: demucs-rest
    port: 5000
    targetPort: 5000
