rest/rest-ingress-gke.yaml
#
# See https://kubernetes.io/docs/concepts/services-networking/ingress/
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "gce"
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
spec:
  rules:
    #
    # Your ingress rules here
    #
    - host: localhost
      http:
        paths:
          - path: /
            backend:
              service:
                name: demucs-rest-svc
                port:
                  number: 5000
            pathType: Prefix
